<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Akash Android Sample</string>
    <string name="app_id">227706627265095</string>
    <string name="app_info">A sample android app that integrates with facebook to perform specific tasks</string>
    <string name="login_msg">Login with Facebook to begin</string>
    <string name="logged_in_msg">Welcome, you are now logged in.</string>
    <string name="settings">Settings</string>
    <string name="user_name">Loading…</string>
    <string name="user_location">Loading…</string>
    <string name="user_education">Loading…</string>
    <string name="task_header">What would you like to do?</string>
    <string name="view_friends_button">View Friends</string>
    <string name="view_pictures_from_feed_button">View Pictures</string>
    <string name="view_places_button">Check In</string>
    <string name="base_row_view">picture</string>
    <string name="under_construction">Under Construction</string>
    <string name="progress_dialog">Loading…</string>
    <string name="ok_text">OK</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="like_text">Likes:</string>

</resources>